// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense list with NO expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body list-message"
  >
    <span>
      No expenses
    </span>
  </div>
  <br />
</div>
`;

exports[`Should render expense list with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <ExpenseItem
    amount={3500}
    createdAt={0}
    description="Rent"
    id="1"
    key="1"
    note=""
  />
  <ExpenseItem
    amount={4500}
    createdAt={-345600000}
    description="Gaz"
    id="2"
    key="2"
    note=""
  />
  <ExpenseItem
    amount={500}
    createdAt={345600000}
    description="Water"
    id="3"
    key="3"
    note=""
  />
  <br />
</div>
`;
